<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_test_snackbar_utils"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jet.msnackbar.TestSnackbarUtilsActivity"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/bt_memory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/memoryleak"
            />

        <Button
            android:id="@+id/crazybutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crazybutton"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/bt_short"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/length_short"
                />
            <Button
                android:id="@+id/bt_long"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/length_long"
                />
            <Button
                android:id="@+id/bt_indefinite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/length_indefinite"
                />
        </LinearLayout>
        <Button
            android:id="@+id/bt_length_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/length_custom"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backgroundcolor"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/bt_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/info"
                />
            <Button
                android:id="@+id/bt_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/confirm"
                />
            <Button
                android:id="@+id/bt_warn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/warning"
                />
            <Button
                android:id="@+id/bt_danger"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/danger"
                />
        </LinearLayout>
        <Button
            android:id="@+id/bt_back_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_custom"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/messageactioncolor"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/bt_color_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/color_message"
                />
            <Button
                android:id="@+id/bt_color_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/color_action"
                />
        </LinearLayout>
        <Button
            android:id="@+id/bt_back_alpha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alpha"
            />
        <Button
            android:id="@+id/bt_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action"
            />
        <Button
            android:id="@+id/bt_callback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/callback"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/messageviewgravity"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/bt_message_gravity_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/message_gravity_default"
                />
            <Button
                android:id="@+id/bt_message_gravity_center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/message_gravity_center"
                />
            <Button
                android:id="@+id/bt_message_gravity_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/message_gravity_right"
                />
        </LinearLayout>
        <Button
            android:id="@+id/bt_message_leftright_drawable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_leftright_drawable"
            />
        <Button
            android:id="@+id/bt_addview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addview"
            />
        <Button
            android:id="@+id/bt_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radius"
            />
        <Button
            android:id="@+id/bt_radius_stroke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radius_stroke"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/snackbargravity"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/bt_gravity_default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/snackbar_layout_gravity_default"
                />
            <Button
                android:id="@+id/bt_gravity_top"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/snackbar_layout_gravity_top"
                />
            <Button
                android:id="@+id/bt_gravity_center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/snackbar_layout_gravity_center"
                />
        </LinearLayout>
        <Button
            android:id="@+id/bt_margins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/margins"
            />
        <Button
            android:id="@+id/bt_above"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/above"
            />
        <Button
            android:id="@+id/bt_bellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bellow"
            />
        <Button
            android:id="@+id/bt_multimethods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multimethods"
            />
    </LinearLayout>
</ScrollView>
